# dal

./: CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  musx.cpp
example/: read_wave_and_to_file.cpp
examples/: helper.h  musx_audio.cpp  musx_player.cpp
include/: Musx.h  musx.h  sndfile.h
include/dal/: audio_view.hpp
include/musx/: basic_audiostream.hpp  basic_manager.hpp  basic_sndstream.hpp  buffer_tool.hpp  exception.hpp  ios.hpp  isndstream.hpp  musx.hpp  oaudiostream.hpp  source_manager.hpp  streaming_manager.hpp
lib/: OpenAL32.exp  OpenAL32.lib
lib/WIN32/: OpenAL32.exp  OpenAL32.lib
src/: CMakeLists.txt  Musx.cpp  main.cpp
